examples/course/1221/index.js
System.register(["@haztivity/core/index", "./pages/6611/6611"], function (exports_1, context_1) {
    "use strict";
    var __moduleName = context_1 && context_1.id;
    var index_1, _6611_1, sco;
    return {
        setters: [
            function (index_1_1) {
                index_1 = index_1_1;
            },
            function (_6611_1_1) {
                _6611_1 = _6611_1_1;
            }
        ],
        execute: function () {
            sco = index_1.ScoFactory.createSco({
                name: "1221",
                pages: [
                    _6611_1.page6611
                ],
                components: []
            });
            //pageChangeStart
            sco.on();
            //pageChangeEnd
            sco.on();
            //pageComplete
            sco.on();
            //sco end
            sco.on();
            //error
            sco.on();
            sco.run();
        }
    };
});
//# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoiaW5kZXguanMiLCJzb3VyY2VSb290IjoiIiwic291cmNlcyI6WyJpbmRleC50cyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiOzs7Ozs7Ozs7Ozs7OztZQU1JLEdBQUcsR0FBUyxrQkFBVSxDQUFDLFNBQVMsQ0FDaEM7Z0JBQ0ksSUFBSSxFQUFFLE1BQU07Z0JBQ1osS0FBSyxFQUFFO29CQUNILGdCQUFRO2lCQUNYO2dCQUNELFVBQVUsRUFBRSxFQUFFO2FBQ2pCLENBQ0osQ0FBQztZQUNGLGlCQUFpQjtZQUNqQixHQUFHLENBQUMsRUFBRSxFQUFFLENBQUM7WUFDVCxlQUFlO1lBQ2YsR0FBRyxDQUFDLEVBQUUsRUFBRSxDQUFDO1lBQ1QsY0FBYztZQUNkLEdBQUcsQ0FBQyxFQUFFLEVBQUUsQ0FBQztZQUNULFNBQVM7WUFDVCxHQUFHLENBQUMsRUFBRSxFQUFFLENBQUM7WUFDVCxPQUFPO1lBQ1AsR0FBRyxDQUFDLEVBQUUsRUFBRSxDQUFDO1lBQ1QsR0FBRyxDQUFDLEdBQUcsRUFBRSxDQUFDO1FBQUEsQ0FBQyJ9